# piano

./: .clang-format  .gitmodules  CMakeLists.txt
data/: midi.fragment.glsl  midi.vertex.glsl  note.vertex.glsl
src/: app.cpp  app.h  app_audio_thread.cpp  app_audio_thread.h  app_data.h  app_graphics.cpp  app_graphics.h  app_serial_thread.cpp  app_serial_thread.h  audio.cpp  audio.h  global.h  main.cpp  notes.cpp  notes.h  serial.cpp  serial.h  serial_notes.cpp  serial_notes.h  serial_parser.cpp  serial_parser.h  sounds.cpp  sounds.h  windows_serial.cpp  windows_serial.h
